Added easier collsion detection, range of towers display, and pause button.

--- a/com/necrolore/greenfoot/.gitignore
+++ b/com/necrolore/greenfoot/.gitignore
@@ -1,3 +1,8 @@
 /Level.class
 /Actors.class
 /CollisionWorld.class
+/GifImage$GifDecoder$GifFrame.class
+/GifImage$GifDecoder.class
+/GifImage.class
+/Range.class
+/PauseButton.class
